fix alignment

--- a/src/App.scss
+++ b/src/App.scss
@@ -48,7 +48,7 @@ main {
 .wrapper {
   width: min(999px, 90%);
   margin: 0 auto;
-  padding: 2rem;
+  padding: .5rem 3rem;
   background: whitesmoke;
   border-radius: 20px;
 }
